# singbox-commander

./: .gitignore  Cargo.toml  LICENSE  README.md  app.manifest  build.py  build.rs  embed.rc  fix_pe_manifest.py  gen_app_icon.py  gen_icons.py
.cargo/: config.toml
src/: config_gen.rs  main.rs  nodes.rs  singbox.rs  status.rs
